Fixes and extension of bibliography.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -26,3 +26,19 @@
 	Publisher = {ACM Press},
 	Title = {A reversible programming language and its invertible self-interpreter},
 	Year = {2007}}
+
+@article{huelsbergen1996logically,
+  title={A logically reversible evaluator for the call-by-name lambda calculus},
+  author={Huelsbergen, L.},
+  journal={InterJournal Complex Systems},
+  volume={46},
+  year={1996}
+}
+
+@article{altenkirchquantum,
+  title={The Quantum IO Monad},
+  author={Altenkirch, T. and Green, A.},
+  journal={Semantic Techniques in Quantum Computation},
+  pages={173--205},
+  publisher={Citeseer}
+}
