--- a/paper.tex
+++ b/paper.tex
@@ -1,15 +1,3 @@
-%-----------------------------------------------------------------------------
-%
-%               Template for TPL course using the sigplanconf LaTeX Class
-%
-% Name:         ACMsigplan-template.tex
-%
-% Purpose:      A template for sigplanconf.cls, which is a LaTeX 2e class
-%               file for ACM SIGPLAN conference proceedings.
-%
-%-----------------------------------------------------------------------------
-
-
 \documentclass[10pt]{sigplanconf}
 
 %%%%% YOUR PACKAGES %%%%%
@@ -81,7 +69,7 @@ Acknowledgments, if needed.
 %%%%% YOUR BIBLIOGRAPHY %%%%%
 \bibliographystyle{abbrvnat}
 % The file where you have bibliography: bibliography.bib
-\bibliography{bibiography}
+\bibliography{bibliography}
 
 %%%%% YOUR APPENDIX %%%%%
 \appendix
