--- a/paper.tex
+++ b/paper.tex
@@ -2,6 +2,7 @@
 
 %%%%% YOUR PACKAGES %%%%%
 \usepackage{amsmath}
+\usepackage[utf8x]{inputenc}
 
 %%%%% END %%%%%
 
@@ -68,12 +69,14 @@ Haskell, the tradeoffs necessary for the technique to be efficient
 Janus.
 
 \section{Section 2}
-Reversible computing is interesting and builds on work by Bennett~\cite{Bennett:1982}. Applications of these principles can be found in~\cite{ThomsenAxelsen:2009:PPL,YokoyamaGlueck:2007:Janus}.
+Reversible computing is interesting and builds on work by
+Bennett~\cite{Bennett:1982}. Applications of these principles can be found
+in~\cite{ThomsenAxelsen:2009:PPL,YokoyamaGlueck:2007:Janus}.
 
-\subsection{A subsection}
 
-
-\subsubsection{A subsubsection}
+\section{A reversible $\lambda$-calculus}
+\cite{huelsbergen1996logically} defines the lambda calculus equivalent of a
+turing machine with a history tape, by means of a $\lambda$ interpreter machine written in SML called SECD-H.
 
 
 \section{Conclusion}
